@@ -16,6 +16,7 @@ Some changes are backward incompatible and may require code change in the projec
 * Using 'strict' mode now in all JS sources
 
 . Components: Scorecard, Cube, Charts, Export
+* new CubeConfigurator headerClickSort attribute to allow hard sorting of dimensions and measures
 * Charts support for dark themes
 * Charts removed some chart background grid elements for less crowded charts
 * Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
